JDK 17 only